# movieclaw

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260708_2218_41c9c2b9bbbc_init_site_credential_and_site_cookie.py  20260708_2236_b4162f0ac46b_add_config_status_fields_to_site_.py  20260708_2257_a8545b6cd9c2_add_last_checked_at_to_site_credential.py  20260708_2313_b77cfd61a98b_add_scheduled_task_and_task_run.py  20260708_2314_f58f64726079_add_app_setting_table.py  20260709_0042_1108fee89a70_add_site_torrent_and_site_sync_cursor.py  20260709_0101_a53c51c366d8_add_cadence_fields_to_site_sync_cursor.py  20260710_2129_b3508bee78ab_add_search_history_table.py  20260710_2151_c4e8d0a17f52_add_site_user_profile_table.py  20260710_2320_e9a4c7d15b02_add_enrich_attrs_and_hr_to_site_torrent.py  20260711_1030_d7f2a91c4e33_rework_search_history_for_tab_scopes.py  20260711_1500_e8b3d6f4a921_add_downloader_client_table.py  20260711_1720_f2c8a5d7b310_add_is_default_to_downloader_client.py  20260711_2140_a3f7c2d9e814_add_snapshot_to_search_history.py  20260711_2230_b5c1e8f3a927_add_poster_mode_to_search_history.py  20260712_1030_c7d2f9a4e186_add_vertical_to_search_history.py  20260712_1600_d4e8b2c7f591_add_llm_provider_table.py  20260713_1100_e5f9c3d8a642_add_extra_models_to_llm_provider.py  20260713_1400_a9b3e6d2c754_add_media_item_and_media_season.py  20260713_1800_b6c4d8e2f915_add_failure_tracking_to_site_sync_cursor.py  20260713_2000_c8d5e9f3a627_add_subscription_wanted_item_rule_set.py  20260713_2200_d9e6f4a8b213_add_subscription_activity.py  20260718_1200_e1a7c3f9b508_add_agent_session.py  20260718_1900_c5e2a8d4f176_add_cache_entry_table.py  20260718_2200_f3a9c1d7e582_add_library_and_subscription_library_id.py  20260719_1200_a7d4e9c2b361_add_library_file_and_wanted_pipeline_fields.py  20260721_1400_b8e5d2c9f437_add_download_hint_table.py  20260722_1600_c4f7a2e8d915_add_library_ingest_dirs_and_ingest_entry.py  20260722_2000_d8b3f5c1a624_add_import_watch_drop_library_ingest_dirs.py  20260724_1000_e6a9c4d2b718_add_downloader_path_mappings.py  20260724_1900_f7b2d5e9c341_add_unidentified_reason_to_library_file.py
apps/extension/: README.md  package.json  wxt.config.ts
apps/web/: .env.example  eslint.config.mjs  next-env.d.ts  next.config.ts  package.json  tsconfig.json
docker/: entrypoint.sh
docs/design/: library.md  subscription-p4.md  subscription-plan.md  subscription.md
ml/: .gitignore  README.md  requirements.txt
ml/tests/: test_dataio.py  test_encoding.py
ml/torrent_ner/: __init__.py  annotate.py  augment.py  crosscheck.py  dataio.py  encoding.py  evaluate.py  export.py  extract_source.py  guard_audit.py  labels.py  mine.py  mine_similar.py  model.py  postprocess.py  sample.py  train.py  validate.py  wildcheck.py
plans/: movieclaw-web控制台基础框架.md  统一异常处理和日志规范.md
scripts/: build-image.sh  dev.sh
src/movieclaw_agent/: __init__.py  events.py  prompts.py  runner.py  toolkit.py
src/movieclaw_api/: __init__.py  app.py  exceptions.py  handlers.py  lifespan.py  main.py  middleware.py
src/movieclaw_cache/: __init__.py  memory.py  store.py  swr.py
src/movieclaw_db/: __init__.py  crypto.py  engine.py  migrations.py  stores.py
src/movieclaw_downloader/: __init__.py  base.py  exceptions.py  factory.py  models.py  torrent.py
src/movieclaw_enrich/: __init__.py  extractors.py  inference.py  models.py  structure.py  vocab.py
src/movieclaw_llm/: __init__.py  base.py  exceptions.py  models.py  router.py  tools.py
src/movieclaw_matcher/: __init__.py  decision.py  identity.py  models.py  rules.py
src/movieclaw_media/: __init__.py  douban.py  library.py  models.py  service.py  tmdb.py
src/movieclaw_net/: __init__.py  breaker.py  egress.py
src/movieclaw_scheduler/: __init__.py  config.py  registry.py  runner.py  service.py  tasks.py
src/movieclaw_tracker/: __init__.py  auth.py  base.py  exceptions.py  http.py  models.py  ratelimit.py  registry.py  selectors.py
tests/: conftest.py
tests/api/: test_agent.py  test_agent_runs.py  test_agent_sessions.py  test_appearance.py  test_auth.py  test_avatar.py  test_discover.py  test_download_submit.py  test_downloaders.py  test_extension.py  test_fs_browse.py  test_health.py  test_image_cache.py  test_image_proxy.py  test_infra.py  test_libraries.py  test_library_import.py  test_library_ingest.py  test_library_items.py  test_library_l4.py  test_library_missing.py  test_library_organize.py  test_library_resolve.py  test_library_scan.py  test_library_scan_completeness.py  (+15 more)
(+288 files in other folders)
