[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movieclaw"
version = "0.1.0"
description = "Best-practice Python HTTP service template powered by FastAPI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "yipengfei" }
]
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "parsel>=1.9.0,<2.0.0",
  "tenacity>=9.0.0,<10.0.0",
  "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "pytest-asyncio>=1.1.0,<2.0.0",
  "ruff>=0.12.0,<1.0.0",
]

[project.scripts]
movieclaw-api = "movieclaw_api.main:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
markers = [
  "integration: 依赖真实网络或 cookie 的集成测试，CI 中可用 -m 'not integration' 跳过",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
